--- a/qrstyles.css
+++ b/qrstyles.css
@@ -11,27 +11,27 @@ body{
     background-color: hsl(212, 45%, 89%);
 }
 .container{
-    height: 70vh;
+    height: 65svh;
     min-width: 250px;
     display: flex;
     flex-direction: column;
-    margin: auto;
-    justify-content: center;
+    margin: 0 auto;
+    justify-content: flex-start;
     align-items: center;
     border: 1px solid black;
-    border-radius: 5%;
+    border-radius: 20px;
     padding: 5px 10px;
     background-color: white;
     
 }
 img{
-    border-radius: 4%;
+    border-radius: 15px;
     height: 235px;
     width: 235px;
 }
 #text{
     margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     width: 100%;
 }
 h2, p{
@@ -56,11 +56,11 @@ p{
         height: 300px;
     }
     .container{
-        min-width:10%;
-        max-width: 23%;
-        height: 75%;
+        /* min-width:10%; */
+        max-width: 322px;
+        /* height: 75%; */
         margin: auto;
-        padding-top: 0;
+        /* padding-top: 0; */
         
     }
     
